# PCR_Manager

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COMMIT_INSTRUCTIONS.md  E2E_Feedback.md  README.md  SECURITY.md  STRUCTURE.md  brief_maquette.md  brief_patch_v2.md  cahier_des_charges_radioprotection_v2.md  commit-changes.sh  do-commit.sh  execution_log.md  execution_log_v2.md  execution_log_v3_cli.md  execution_log_v3_qwen2.md  execution_log_v3_task10.md  index.html  maquette_index.html  package-lock.json  package.json  plan_fidelity_v3.json  plan_maquette.json  plan_patch_v2.json  schema.sql  tailwind.config.js  tailwind.config.ts  test-dashboard.ps1  tsconfig.json  validate.sh  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
.github/workflows/: ci.yml
.plan/: brief_fix_ts.md  execution_fix_ts.md  execution_log.md  execution_log_ameliorations.md  execution_log_docs.md  execution_log_testfix.md  execution_log_tests.md  plan.json  plan_ameliorations.json  plan_docs.json  plan_fix_ts.json  plan_testfix.json  plan_tests.json  sujet.md  sujet_ameliorations.md  sujet_docs.md  sujet_testfix.md  sujet_tests.md
design-mockup/: README.md
design-mockup/project/: index.html
docs/: README.md  STRUCTURE.md  architecture.md  auth-iphone-architecture.md  backend.md  build-deploy.md  business-logic.md  database.md  frontend.md  roadmap.md  security.md  testing.md
e2e/: habilitation-status.e2e.ts
ios/: README.md
scripts/: reset-prod.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V10__registre_traitement.sql  V1__initial.sql  V2__seed_demo.sql  V3__competence_description.sql  V4__appareil_competences.sql  V5__local_auth.sql  V6__competence_validity_assignments.sql  V7__iphone_auth.sql  V8__iphone_ka_key.sql  V9__journal_acces.sql
src-tauri/src/: auth.rs  auth_iphone.rs  auth_mac.rs  auth_totp.rs  db.rs  ecies.rs  lib.rs  main.rs  models.rs  schema.sql  seed_demo.sql  validators.rs
src-tauri/src/commands/: appareil.rs  competence.rs  controle_qualite.rs  document.rs  etablissement.rs  export_import.rs  habilitation.rs  mod.rs  travailleur.rs  travailleur_appareil.rs  verification.rs
src/lib/: api.ts  (+4 more)
(+101 files in other folders)
