[package]
name = "pcr-manager"
version = "0.1.0"
edition = "2021"
description = "PCR Manager — suivi radioprotection"
authors = ["PCR Manager"]

[lib]
name = "pcr_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pcr-manager"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "1"
directories = "5"
parking_lot = "0.12"
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
url = "2"
keyring = "2"
tauri-plugin-localhost = "2"
rfd = "0.15"
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
flate2 = "1"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
